--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -586,4 +586,5 @@
     <string name="otp_verification_failed">ምርግጋጽ ኦቲፒ ኣይተዓወተን፤</string>
     <string name="otp_code_cannot_be_null_or_empty">OTP ኮድ ባዶ ወይ ባዶ ክኸውን ኣይክእልን እዩ።</string>
     <string name="phone_number_cannot_be_null_or_empty">ቁጽሪ ተሌፎን ባዶ ወይ ባዶ ክኸውን ኣይክእልን እዩ።</string>
+    <string name="verification_failed">ምርግጋጽ ኣይተዓወተን በጃኹም ደጊምኩም ፈትኑ</string>
 </resources>
