--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -616,4 +616,5 @@ License.
     <string name="otp_verification_failed">Échec de la vérification OTP:</string>
     <string name="otp_code_cannot_be_null_or_empty">Le code OTP ne peut pas être nul ou vide</string>
     <string name="phone_number_cannot_be_null_or_empty">Le numéro de téléphone ne peut pas être nul ou vide</string>
+    <string name="verification_failed">La vérification a échoué, veuillez réessayer.</string>
 </resources>
