--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -935,4 +935,5 @@
     <string name="camera_permission_title">Permission for camera</string>
     <string name="camera_permission_msg">In order to take a picture, CommCare needs permission to use your device camera.</string>
     <string name="capture_photo">Capture Photo</string>
+    <string name="location_permission_denied">Location permission denied</string>
 </resources>
