Added individual error messages for additional HTTP response codes. Changed message for parsing errors in failure code to UNKNOWN_ERROR.

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -331,6 +331,10 @@
     <string name="recovery_network_outdated">The app is outdated and can no longer communicate with the server. Please update the app on the Google Play Store.</string>
     <string name="recovery_network_token_unavailable">There was a network issue, please try again.</string>
     <string name="recovery_network_token_request_rejected">Lost PersonalID configuration with server, please recover your Personal ID account and retry</string>
+    <string name="recovery_network_unauthorized">You are not authorized to make this request.</string>
+    <string name="recovery_network_server_error">There was an error processing your request.</string>
+    <string name="recovery_network_cooldown">Too many request attempts, try again after an hour.</string>
+    <string name="recovery_network_unknown">Something went wrong, please try again.</string>
     <string name="recovery_app_manager">Go to App Manager</string>
     <string name="recovery_retry">Retry Recovery</string>
     <string name="notification_channel_errors_title">Errors</string>
