--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -419,9 +419,9 @@ License.
     <string name="connect_visit_type_title">%s Visites</string>
     <string name="connect_job_tile_daily_visits">Visites quotidiennes</string>
     <string name="connect_appbar_title_app_lock">Verrouillage d\'application</string>
-    <string name="incorrect_otp">Le mot de passe à usage unique saisi est incorrect. Veuillez réessayer.</string>
-    <string name="too_many_attempts">Trop de tentatives. Veuillez réessayer plus tard.</string>
-    <string name="missing_activity">Quelque chose s\'est mal passé</string>
-    <string name="otp_verification_failed">Échec de la vérification OTP:</string>
-    <string name="verification_failed">La vérification a échoué, veuillez réessayer.</string>
+    <string name="personalid_incorrect_otp">Le mot de passe à usage unique saisi est incorrect. Veuillez réessayer.</string>
+    <string name="personalid_too_many_otp_attempts">Trop de tentatives. Veuillez réessayer plus tard.</string>
+    <string name="personalid_otp_missing_activity">Quelque chose s\'est mal passé</string>
+    <string name="personalid_otp_verification_failed_generic">Échec de la vérification OTP:</string>
+    <string name="personalid_otp_verification_failed">La vérification a échoué, veuillez réessayer.</string>
 </resources>
