--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -417,9 +417,9 @@
     <string name="connect_job_tile_daily_limit_description">Limite diário atingido. Nenhum pagamento pelo envio de formulários</string>
     <string name="connect_job_tile_daily_visits">Visitas diárias</string>
     <string name="connect_appbar_title_app_lock">Bloqueio de aplicação</string>
-    <string name="incorrect_otp">O OTP inserido está incorreto. Tente novamente.</string>
-    <string name="too_many_attempts">Muitas tentativas. Tente novamente mais tarde.</string>
-    <string name="missing_activity">Algo deu errado</string>
-    <string name="otp_verification_failed">Falha na verificação do OTP:</string>
-    <string name="verification_failed">A verificação falhou. Tente novamente.</string>
+    <string name="personalid_incorrect_otp">O OTP inserido está incorreto. Tente novamente.</string>
+    <string name="personalid_too_many_otp_attempts">Muitas tentativas. Tente novamente mais tarde.</string>
+    <string name="personalid_otp_missing_activity">Algo deu errado</string>
+    <string name="personalid_otp_verification_failed_generic">Falha na verificação do OTP:</string>
+    <string name="personalid_otp_verification_failed">A verificação falhou. Tente novamente.</string>
 </resources>
