- Added translation for missing strings

--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -422,4 +422,43 @@
     <string name="personalid_otp_missing_activity">Algo deu errado</string>
     <string name="personalid_otp_verification_failed_generic">Falha na verificação do OTP:</string>
     <string name="personalid_otp_verification_failed">A verificação falhou. Tente novamente.</string>
+    <string name="connect_registration_subtitle">Introduza o seu número de telefone</string>
+    <string name="connect_recovery_button_phone">Continuar</string>
+    <string name="connect_messaging_title">Mensagens</string>
+    <string name="connect_messaging_channel_list_title">Canais</string>
+    <string name="connect_messaging_channel_list_unconsented">Canal não consentido</string>
+    <string name="connect_messaging_channel_consent_failure_msg">Falha ao conceder consentimento para canalizar</string>
+    <string name="connect_messaging_message_notification_title">🔔 Nova Mensagem 🔔</string>
+    <string name="connect_messaging_message_notification_message">Recebeu uma nova mensagem de %s, prima aqui para visualizar.</string>
+    <string name="connect_messaging_channel_notification_title">🔔 Novo Canal 🔔</string>
+    <string name="connect_messaging_channel_notification_message">Um novo canal de mensagens está disponível em %s, clique aqui para visualizar</string>
+    <string name="connect_messaging_send_message_fail_msg">Falha ao enviar mensagem</string>
+    <string name="connect_messaging_retrieve_messages_fail">Falha ao recuperar mensagens</string>
+    <string name="connect_send_message_hint">Digite mensagem</string>
+    <string name="connect_send_message_btn_desc">Clique aqui para enviar mensagem</string>
+    <string name="connect_corrupt_job_text">Falha ao carregar esta oportunidade</string>
+    <string name="connect_results_summary_pending">Pendente</string>
+    <string name="connect_results_summary_rejected">Rejeitado</string>
+    <string name="connect_results_summary_approved">Aprovado</string>
+    <string name="personalid_login_via_connect">Pronto para fazer login!\n</string>
+    <string name="personalid_failed_to_login_with_connectid">Estamos a deparar-nos com um erro irrecuperável ao tentar fazer login usando o seu ID Pessoal. Faça login com a sua palavra-passe ou restaure o seu login com o ID Pessoal.</string>
+    <string name="personalid_name_fragment_subtitle">Por favor, insira o seu nome tal como aparece na sua identificação emitida pelo governo</string>
+    <string name="personalid_name_empty_error">O campo nome não pode estar vazio</string>
+    <string name="personalid_configuration_process_failed_title">Falha no processo</string>
+    <string name="personalid_configuration_process_failed_subtitle">De momento, o seu dispositivo não está qualificado para se inscrever no PersonalID. Tente novamente noutro dispositivo.</string>
+    <string name="personalid_configuration_process_failed_security_subtitle">De momento, o seu dispositivo não está qualificado para se inscrever no PersonalID devido à indisponibilidade da funcionalidade de segurança %s. Tente novamente noutro dispositivo.</string>
+    <string name="personalid_configuration_process_failed_server_msg">Requisitos de segurança do dispositivo inválidos do servidor: %s</string>
+    <string name="personalid_photo_capture_title">Bem-vindo %1$s</string>
+    <string name="personalid_photo_capture_subtitle">Por favor, tire uma fotografia sua para concluir a configuração da sua conta</string>
+    <string name="personalid_photo_capture_take_photo_button">Tirar foto</string>
+    <string name="personalid_photo_capture_save_photo_button">Guardar foto</string>
+    <string name="personalid_photo_upload_failure">Falha ao guardar a foto. Verifique a sua internet e tente novamente.</string>
+    <string name="personalid_this_is_not_me"><u>Este não sou eu</u></string>
+    <string name="personalid_welcome_back_msg">Bem-vindo de volta %s</string>
+    <string name="personalid_recovery_failed_title">Falha na recuperação</string>
+    <string name="personalid_recovery_failed_message">Parece que se esqueceu do seu código de backup, estamos a criar uma nova conta para si</string>
+    <string name="personalid_wrong_backup_message">Introduziu o Código de Backup errado. Tente novamente. Terá de criar uma nova conta após %d tentativas incorretas.</string>
+    <string name="personalid_camera_permission_title">Permissão para câmara</string>
+    <string name="personalid_camera_permission_msg">Para tirar uma fotografia, o CommCare precisa de permissão para utilizar a câmara do seu dispositivo.</string>
+    <string name="personalid_capture_photo">Capturar foto</string>
 </resources>
