--- a/app/res/values-sw/strings.xml
+++ b/app/res/values-sw/strings.xml
@@ -431,4 +431,34 @@
     <string name="personalid_otp_missing_activity">Hitilafu fulani imetokea</string>
     <string name="personalid_otp_verification_failed_generic">Uthibitishaji wa OTP haukufaulu:</string>
     <string name="personalid_otp_verification_failed">Uthibitishaji haukufaulu na tafadhali jaribu tena</string>
+    <string name="connect_registration_subtitle">Weka Nambari yako ya Simu</string>
+    <string name="connect_backup_code_message_title">Nambari ya Hifadhi Nakala ya Kitambulisho cha Kibinafsi</string>
+    <string name="connect_backup_code_message">Weka Nambari yako ya Hifadhi Nakala yenye tarakimu 6</string>
+    <string name="connect_messaging_channel_consent_failure_msg">Imeshindwa kutoa idhini kwa kituo</string>
+    <string name="connect_messaging_send_message_fail_msg">Imeshindwa kutuma ujumbe</string>
+    <string name="connect_messaging_retrieve_messages_fail">Imeshindwa kurejesha ujumbe</string>
+    <string name="connect_send_message_hint">Andika ujumbe</string>
+    <string name="connect_send_message_btn_desc">Bonyeza hapa kutuma ujumbe</string>
+    <string name="connect_corrupt_job_text">Imeshindwa kupakia fursa hii</string>
+    <string name="personalid_login_via_connect">Tayari kuingia!\n</string>
+    <string name="personalid_failed_to_login_with_connectid">Tunakabiliwa na hitilafu isiyoweza kurekebishwa wakati wa kuunganisha kuingia kwa kutumia Kitambulisho chako cha Kibinafsi. Tafadhali ingia na nenosiri lako au urejeshe kuingia kwa Kitambulisho chako cha Kibinafsi</string>
+    <string name="personalid_name_fragment_subtitle">Tafadhali ingiza jina lako jinsi linavyoonekana kwenye kitambulisho chako kilichotolewa na serikali</string>
+    <string name="personalid_name_empty_error">Sehemu ya jina haiwezi kuwa tupu</string>
+    <string name="personalid_configuration_process_failed_title">Mchakato Umeshindwa</string>
+    <string name="personalid_configuration_process_failed_subtitle">Kifaa chako hakijatimiza masharti ya kujisajili kwa Kitambulisho cha Kibinafsi kwa wakati huu. Tafadhali jaribu tena kwenye kifaa tofauti.</string>
+    <string name="personalid_configuration_process_failed_security_subtitle">Kifaa chako hakijatimiza masharti ya kujisajili kwa Kitambulisho cha Kibinafsi kwa wakati huu kwa sababu ya kutopatikana kwa kipengele cha usalama cha %s. Tafadhali jaribu tena kwenye kifaa tofauti.</string>
+    <string name="personalid_configuration_process_failed_server_msg">Mahitaji batili ya usalama wa kifaa kutoka kwa seva: %s</string>
+    <string name="personalid_photo_capture_title">Karibu %1$s</string>
+    <string name="personalid_photo_capture_subtitle">Tafadhali jipige picha ili ukamilishe kusanidi akaunti yako</string>
+    <string name="personalid_photo_capture_take_photo_button">Piga Picha</string>
+    <string name="personalid_photo_capture_save_photo_button">Hifadhi Picha</string>
+    <string name="personalid_photo_upload_failure">Imeshindwa kuhifadhi picha. Tafadhali angalia intaneti yako na ujaribu tena.</string>
+    <string name="personalid_this_is_not_me"><u>Huyu si mimi</u></string>
+    <string name="personalid_welcome_back_msg">Karibu tena %s</string>
+    <string name="personalid_recovery_failed_title">Urejeshaji haukufaulu</string>
+    <string name="personalid_recovery_failed_message">Inaonekana umesahau Nambari yako ya Hifadhi Nambari, tunakuundia akaunti mpya</string>
+    <string name="personalid_wrong_backup_message">Umeweka Nambari ya Hifadhi Nambari isiyo sahihi, tafadhali jaribu tena. Utahitaji kuunda akaunti mpya baada ya majaribio %d zaidi yasiyo sahihi.</string>
+    <string name="personalid_camera_permission_title">Ruhusa ya kamera</string>
+    <string name="personalid_camera_permission_msg">Ili kupiga picha, CommCare inahitaji ruhusa ya kutumia kamera ya kifaa chako.</string>
+    <string name="personalid_capture_photo">Piga Picha</string>
 </resources>
