--- a/app/res/values-ti/strings.xml
+++ b/app/res/values-ti/strings.xml
@@ -408,4 +408,43 @@
     <string name="personalid_otp_missing_activity">ገለ ነገር ተጋግዩ።</string>
     <string name="personalid_otp_verification_failed_generic">ምርግጋጽ ኦቲፒ ኣይተዓወተን፤</string>
     <string name="personalid_otp_verification_failed">ምርግጋጽ ኣይተዓወተን በጃኹም ደጊምኩም ፈትኑ</string>
+    <string name="connect_registration_subtitle">ቁጽሪ ተሌፎንኩም ኣእትዉ</string>
+    <string name="connect_recovery_button_phone">ቀፃሊ</string>
+    <string name="connect_messaging_title">መልእኽቲ ምልውዋጥ</string>
+    <string name="connect_messaging_channel_list_title">ቻነላት</string>
+    <string name="connect_messaging_channel_list_unconsented">ፍቓድ ዘይብሉ ቻነል</string>
+    <string name="connect_messaging_channel_consent_failure_msg">ንቻነል ፍቓድ ምሃብ ኣይከኣለን</string>
+    <string name="connect_messaging_message_notification_title">🔔 ሓድሽ መልእኽቲ 🔔</string>
+    <string name="connect_messaging_message_notification_message">ካብ %s ሓድሽ መልእኽቲ መጺኡካ፡ ንምርኣይ ኣብዚ ጠውቕ።</string>
+    <string name="connect_messaging_channel_notification_title">🔔 ሓድሽ ቻነል 🔔</string>
+    <string name="connect_messaging_channel_notification_message">ሓድሽ ናይ መልእኽቲ ቻነል ካብ %s ይርከብ፣ ንምርኣይ ኣብዚ ጠውቑ</string>
+    <string name="connect_messaging_send_message_fail_msg">መልእኽቲ ምልኣኽ ዘይምኽኣል</string>
+    <string name="connect_messaging_retrieve_messages_fail">መልእኽትታት ምምላስ ኣይከኣለን</string>
+    <string name="connect_send_message_hint">መልእኽቲ ጽሓፍ</string>
+    <string name="connect_send_message_btn_desc">መልእኽቲ ንምልኣኽ ኣብዚ ጠውቑ</string>
+    <string name="connect_corrupt_job_text">ነዚ ዕድል ክጽዕን ኣይከኣለን</string>
+    <string name="connect_results_summary_pending">ኣብ ከይዲ</string>
+    <string name="connect_results_summary_rejected">ተነጺጉ</string>
+    <string name="connect_results_summary_approved">ጸዲቑ</string>
+    <string name="personalid_login_via_connect">ንምእታው ድሉው!\n</string>
+    <string name="personalid_failed_to_login_with_connectid">ውልቃዊ መለለዪ መንነትካ ተጠቒምካ ንምእታው ኣብ እንኣስረሉ እዋን ዘይምለስ ጌጋ የጋጥመና ኣሎ። በጃኻ ብፓስዎርድካ እቶ ወይ ድማ ውልቃዊ መለለዪ መእተዊኻ ምምላስ</string>
+    <string name="personalid_name_fragment_subtitle">በጃኹም ኣብቲ ብመንግስቲ ዝተዋህበኩም መለለዪ መንነትኩም ከም ዝረአ ስምኩም ኣእትዉ</string>
+    <string name="personalid_name_empty_error">ናይ ስም ዓውዲ ባዶ ክኸውን ኣይክእልን እዩ።</string>
+    <string name="personalid_configuration_process_failed_title">መስርሕ ፈሺሉ።</string>
+    <string name="personalid_configuration_process_failed_subtitle">መሳርሒኻ ኣብዚ እዋን\'ዚ ን PersonalID ንምምዝጋብ ብቑዕ ኣይኮነን። በጃኹም ኣብ ካልእ መሳርሒ እንደገና ፈትኑ።</string>
+    <string name="personalid_configuration_process_failed_security_subtitle">መሳርሒኻ ኣብዚ እዋን እዚ ብሰንኪ %s ናይ ጸጥታ ባህሪ ዘይምህላዉ ንPersonalID ክምዝገብ ብቑዕ ኣይኮነን። በጃኹም ኣብ ካልእ መሳርሒ እንደገና ፈትኑ።</string>
+    <string name="personalid_configuration_process_failed_server_msg">ዘይሕጋዊ ናይ መሳርሒ ድሕነት ጠለባት ካብ ኣገልጋሊ: %s</string>
+    <string name="personalid_photo_capture_title">እንቋዕ ብደሓን መጻእኩም %1$s</string>
+    <string name="personalid_photo_capture_subtitle">ምድላው ኣካውንትኩም ንምዝዛም ፎቶኹም ውሰዱ</string>
+    <string name="personalid_photo_capture_take_photo_button">ፎቶ ውሰድ</string>
+    <string name="personalid_photo_capture_save_photo_button">ስእሊ ምዕቃብ</string>
+    <string name="personalid_photo_upload_failure">ስእሊ ምዕቃብ ኣይከኣለን። በጃኹም ኢንተርነትኩም ርኣይዎ እሞ እንደገና ፈትኑ።</string>
+    <string name="personalid_this_is_not_me"><u>እዚ ኣነ ኣይኮንኩን።</u></string>
+    <string name="personalid_welcome_back_msg">እንቋዕ ብደሓን መጻእኩም %s</string>
+    <string name="personalid_recovery_failed_title">ምሕዋይ ኣይተዓወተን</string>
+    <string name="personalid_recovery_failed_message">Backup Code ናትካ ዝረሳዕካዮ ይመስል፣ ሓድሽ ኣካውንት ንፈጥር ኣለና።</string>
+    <string name="personalid_wrong_backup_message">ጌጋ Backup Code ኣእቲኻ፡ በጃኻ ደጊምካ ፈትን። ድሕሪ %d ዝያዳ ዘይቅኑዕ ፈተነታት ሓድሽ ኣካውንት ክትፈጥር ከድልየካ እዩ።</string>
+    <string name="personalid_camera_permission_title">ፍቓድ ንካሜራ</string>
+    <string name="personalid_camera_permission_msg">ስእሊ ንምውሳድ፡ ኮምኬር ናይ መሳርሒኻ ካሜራ ንኽጥቀም ፍቓድ የድልዮ።</string>
+    <string name="personalid_capture_photo">ስእሊ ምቕራጽ</string>
 </resources>
