- Solved french string error

--- a/app/res/values-fr/strings.xml
+++ b/app/res/values-fr/strings.xml
@@ -406,7 +406,7 @@ License.
     <string name="connect_messaging_channel_notification_title">Nouvelle chaîne</string>
     <string name="connect_messaging_channel_notification_message">Un nouveau canal de messagerie est disponible depuis %s, appuyez ici pour voir</string>
     <string name="connect_job_learn_details">En savoir plus sur les détails</string>
-    <string name="connect_progress_ready_for_transition_to_delivery">Vous avez réussi l\'évaluation et êtes prêt à livrer. Consultez le statut de la mission pour continuer.</string>
+    <string name="connect_progress_ready_for_transition_to_delivery">Vous avez réussi lévaluation et êtes prêt à livrer. Consultez le statut de la mission pour continuer.</string>
     <string name="connect_results_summary_all">Tous</string>
     <string name="connect_results_summary_pending">En attente</string>
     <string name="connect_results_summary_rejected">Rejeté</string>
@@ -418,40 +418,40 @@ License.
     <string name="connect_job_info_view_more">Voir plus</string>
     <string name="connect_visit_type_title">%s Visites</string>
     <string name="connect_job_tile_daily_visits">Visites quotidiennes</string>
-    <string name="connect_appbar_title_app_lock">Verrouillage d\'application</string>
+    <string name="connect_appbar_title_app_lock">Verrouillage dapplication</string>
     <string name="personalid_incorrect_otp">Le mot de passe à usage unique saisi est incorrect. Veuillez réessayer.</string>
     <string name="personalid_too_many_otp_attempts">Trop de tentatives. Veuillez réessayer plus tard.</string>
-    <string name="personalid_otp_missing_activity">Quelque chose s\'est mal passé</string>
+    <string name="personalid_otp_missing_activity">Quelque chose sest mal passé</string>
     <string name="personalid_otp_verification_failed_generic">Échec de la vérification OTP:</string>
     <string name="personalid_otp_verification_failed">La vérification a échoué, veuillez réessayer.</string>
     <string name="connect_registration_subtitle">Entrez votre numéro de téléphone</string>
     <string name="connect_backup_code_message_title">Code de sauvegarde PersonalId</string>
     <string name="connect_backup_code_message">Entrez votre code de sauvegarde à 6 chiffres</string>
-    <string name="connect_messaging_channel_consent_failure_msg">Impossible d\'accorder le consentement à la chaîne</string>
-    <string name="connect_messaging_send_message_fail_msg">Échec de l\'envoi du message</string>
+    <string name="connect_messaging_channel_consent_failure_msg">Impossible daccorder le consentement à la chaîne</string>
+    <string name="connect_messaging_send_message_fail_msg">Échec de lenvoi du message</string>
     <string name="connect_messaging_retrieve_messages_fail">Échec de la récupération des messages</string>
     <string name="connect_send_message_hint">Tapez un message</string>
     <string name="connect_send_message_btn_desc">Appuyez ici pour envoyer un message</string>
     <string name="connect_corrupt_job_text">Impossible de charger cette opportunité</string>
     <string name="personalid_login_via_connect">Prêt à vous connecter !\n</string>
     <string name="personalid_failed_to_login_with_connectid">Nous rencontrons une erreur irrécupérable lors de la connexion avec votre identifiant personnel. Veuillez vous connecter avec votre mot de passe ou restaurer votre identifiant personnel.</string>
-    <string name="personalid_name_fragment_subtitle">Veuillez saisir votre nom tel qu\'il apparaît sur votre pièce d\'identité émise par le gouvernement</string>
+    <string name="personalid_name_fragment_subtitle">Veuillez saisir votre nom tel quil apparaît sur votre pièce didentité émise par le gouvernement</string>
     <string name="personalid_name_empty_error">Le champ Nom ne peut pas être vide</string>
     <string name="personalid_configuration_process_failed_title">Échec du processus</string>
-    <string name="personalid_configuration_process_failed_subtitle">Votre appareil n\'est pas compatible avec PersonalID pour le moment. Veuillez réessayer sur un autre appareil.</string>
-    <string name="personalid_configuration_process_failed_security_subtitle">Votre appareil n\'est pas compatible avec PersonalID pour le moment en raison de l\'indisponibilité de la fonctionnalité de sécurité. Veuillez réessayer sur un autre appareil.</string>
+    <string name="personalid_configuration_process_failed_subtitle">Votre appareil nest pas compatible avec PersonalID pour le moment. Veuillez réessayer sur un autre appareil.</string>
+    <string name="personalid_configuration_process_failed_security_subtitle">Votre appareil nest pas compatible avec PersonalID pour le moment en raison de lindisponibilité de la fonctionnalité de sécurité. Veuillez réessayer sur un autre appareil.</string>
     <string name="personalid_configuration_process_failed_server_msg">Exigences de sécurité de périphérique non valides du serveur : %s</string>
     <string name="personalid_photo_capture_title">Bienvenue %1$s</string>
     <string name="personalid_photo_capture_subtitle">Veuillez prendre une photo de vous pour terminer la configuration de votre compte</string>
     <string name="personalid_photo_capture_take_photo_button">Prendre une photo</string>
     <string name="personalid_photo_capture_save_photo_button">Enregistrer la photo</string>
-    <string name="personalid_photo_upload_failure">Échec de l\'enregistrement de la photo. Veuillez vérifier votre connexion Internet et réessayer.</string>
-    <string name="personalid_this_is_not_me"><u>Ce n'est pas moi</u></string>
+    <string name="personalid_photo_upload_failure">Échec de lenregistrement de la photo. Veuillez vérifier votre connexion Internet et réessayer.</string>
+    <string name="personalid_this_is_not_me"><u>Ce nest pas moi</u></string>
     <string name="personalid_welcome_back_msg">Bon retour %s</string>
     <string name="personalid_recovery_failed_title">La récupération a échoué</string>
     <string name="personalid_recovery_failed_message">Il semble que vous ayez oublié votre code de sauvegarde, nous créons un nouveau compte pour vous</string>
     <string name="personalid_wrong_backup_message">Vous avez saisi un code de secours erroné. Veuillez réessayer. Vous devrez créer un nouveau compte après %d tentatives incorrectes.</string>
     <string name="personalid_camera_permission_title">Autorisation pour la caméra</string>
-    <string name="personalid_camera_permission_msg">Afin de prendre une photo, CommCare a besoin de l\'autorisation d'utiliser l'appareil photo de votre appareil.</string>
+    <string name="personalid_camera_permission_msg">Afin de prendre une photo, CommCare a besoin de lautorisation dutiliser lappareil photo de votre appareil.</string>
     <string name="personalid_capture_photo">Prendre une photo</string>
 </resources>
