Arranged "change phone" link below phone text (to avoid overflow when text is wide). Added some missing translations. Shortened one French translation.

--- a/app/res/values-sw/strings.xml
+++ b/app/res/values-sw/strings.xml
@@ -538,6 +538,7 @@
     <string name="download_app">Pakua</string>
     <string name="progress">Maendeleo</string>
     <string name="sync">Sawazisha</string>
+    <string name="micro_image_activity_title">Piga Picha ya Uso</string>
     <string name="connect_job_info_title">Maelezo ya Fursa</string>
     <string name="connect_job_info_delivery_detail">Maelezo ya Uwasilishaji</string>
     <string name="connect_job_info_review_delivery">Kagua maelezo ya utoaji</string>
