--- a/app/res/values-pt/strings.xml
+++ b/app/res/values-pt/strings.xml
@@ -553,6 +553,7 @@
     <string name="download_app">Descarregamento</string>
     <string name="progress">Progresso</string>
     <string name="sync">Sincronizar</string>
+    <string name="micro_image_activity_title">Capturar Imagem Facial</string>
     <string name="connect_job_info_title">Detalhes de oportunidade</string>
     <string name="connect_job_info_delivery_detail">Detalhes da entrega</string>
     <string name="connect_job_info_review_delivery">Revise os detalhes da entrega</string>
