--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -938,4 +938,5 @@
     <string name="camera_permission_title">Permission for camera</string>
     <string name="camera_permission_msg">In order to take a picture, CommCare needs permission to use your device camera.</string>
     <string name="capture_photo">Capture Photo</string>
+    <string name="connect_claim_job_error">Error claiming job</string>
 </resources>
