--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -618,4 +618,5 @@
     <string name="personalid_otp_missing_activity">Something went wrong</string>
     <string name="personalid_otp_verification_failed_generic">OTP verification failed:</string>
     <string name="personalid_otp_verification_failed">Verification failed and please try again</string>
+    <string name="personaliid_location_permission_error">Location permission denied</string>
 </resources>
