--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -622,4 +622,5 @@
     <string name="camera_permission_msg">In order to take a picture, CommCare needs permission to use your device camera.</string>
     <string name="capture_photo">Capture Photo</string>
     <string name="connect_claim_job_error">Error claiming job</string>
+    <string name="my_credentials">My Credentials</string>
 </resources>
