--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -619,4 +619,5 @@
     <string name="personalid_otp_verification_failed_generic">OTP verification failed:</string>
     <string name="personalid_otp_verification_failed">Verification failed and please try again</string>
     <string name="personalid_location_permission_error">Location permission denied</string>
+    <string name="personalid_location_service_error">Location service is not available. Please enable it</string>
 </resources>
